--- a/øving1/index.html
+++ b/øving1/index.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>my amazing website woooow</title>
+    <title>Test title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="header">
         <div class="logo">
-            <img src="tinyedna.png" />
+            <img src="logo.png" />
         </div>
         <div class="headline">
             <h1>title</h1>
         </div>
     </div>
-    <div class="meny">
+    <div class="menu">
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Articles</a></li>
         </ul>
+        <!--Buttons-->
+        <button id="countbutton" class="buttons" onclick="counter()">Press me!</button>
+        <button id="colorchangingbutton" class="buttons" onclick="changeColor()">Press me!</button>
+        <script src="func.js"></script>
     </div>
     <div class="contents">
         <div class="block" id="firstblock">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias nesciunt sunt minima accusantium omnis hic officiis voluptatibus reiciendis iste corrupti assumenda ratione nihil, saepe error dicta sint earum, dolorum vero?</p>
         </div>
         <div class="block" id="secondblock">
-            <p>heihei</p>
+            <picture>
+                <!--Uses another photo when the window size is less than 1050px-->
+                <source srcset="testphotosmall.png" media="(max-width: 1050px)">
+                <source srcset="testphoto.png">
+                <img src="testphoto.png" alt="Test photo">
+            </picture>
         </div>
     </div>
     <div class="footer">
